Upgrade to newer bindings: Currently broken due to VMA binding issue